modules/ecommerce/public/assets/styles/ecommerce.css
/* ... */
/* Product List */

#product-grid {
    margin-top: -12px;
}


/* Product List - Sidebar Categories */


/* Filter panel Styles */

.sidebar-categories .ins-input-wrap,
.product-list .sort-wrap .ins-select-wrap {
    margin-bottom: 0px;
}

.sidebar-categories input[type=number]::-webkit-inner-spin-button,
.sidebar-categories input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

.sidebar-categories input[type=number] {
    -moz-appearance: textfield;
}

.sidebar-categories .ins-form-field-wrap .ins-form-field {
    padding: 7px 10px;
}

.sidebar-categories .ins-form-field-wrap .ins-form-label,
.sidebar-categories ins-checkbox .ins-radio-checkbox label span {
    font-size: var(--font-size-small);
}

.sidebar-categories .ins-select-wrap .ins-select-value-wrap.multiple .multiple-item-wrap {
    padding: 0px 8px;
}

.sidebar-categories .filter-price .price-dash {
    align-self: flex-end;
    margin-bottom: 5px;
    font-weight: 700;
}


/* Drawer Categories */

#mobile-filter-drawer .ins-drawer-wrap .ins-content,
#mobile-filter-drawer .ins-drawer-header.sticky,
#mobile-filter-drawer .ins-accordion-item_header>.inner-head,
#mobile-filter-drawer .ins-accordion-item {
    background: var(--color-ui-01);
}

#mobile-filter-drawer .open .ins-accordion-item_header>.inner-head {
    background: var(--color-ui-02);
}

#mobile-filter-drawer .ins-accordion-item_header>.inner-head a {
    display: inline;
}

#mobile-filter-drawer .open .ins-accordion-item_header>.inner-head a,
#mobile-filter-drawer .icon-minus {
    color: var(--color-main);
    font-family: var(--font-family-01);
}

#mobile-filter-drawer .ins-drawer-wrap .ins-content.left {
    left: -100%;
}

#mobile-filter-drawer .ins-drawer-wrap.opened .ins-content.left {
    left: 0;
}

#mobile-filter-drawer .ins-drawer-header .ins-drawer-close-btn {
    top: 24px;
    color: var(--font-color-head);
    font-size: 18px;
    padding: 12px;
    right: 6px;
    top: 6px;
}

#mobile-filter-drawer .ins-drawer-header.sticky+.ins-drawer-body {
    margin-top: 66px;
    padding: 0px;
}

#mobile-filter-drawer .ins-accordion-item_header>.inner-head,
#mobile-filter-drawer a span,
ins-drawer#mobile-menu .menu li>a,
ins-drawer#mobile-menu .ins-accordion-item>.ins-accordion-item_header>.inner-head,
ins-drawer#mobile-menu .menu .ins-accordion-item_content .ins-accordion-link>a {
    padding: 16px 24px;
    line-height: 34px;
}

#mobile-filter-drawer .ins-accordion-item_header>.inner-head {
    border: none;
    border-bottom: 1px solid var(--color-ui-03, #F3F4F4);
}

#mobile-filter-drawer .ins-accordion.menu .ins-accordion-item_content .inner-content {
    border: none;
    border-bottom: 1px solid var(--color-ui-03, #F3F4F4);
}

#mobile-filter-drawer ins-accordion .ins-accordion {
    display: block;
}

#mobile-filter-drawer ins-accordion .inner-content a {
    padding: 16px 24px 16px 40px;
    font-size: 14px !important;
    border-bottom: 1px solid var(--color-ui-03, #F3F4F4);
}

#mobile-filter-drawer ins-accordion .inner-content:not(:last-child) a {
    border-bottom: 1px solid var(--color-ui-03, #F3F4F4);
}

#mobile-filter-drawer ins-accordion .inner-content a span {
    font-size: 14px !important;
}

#mobile-filter-drawer ins-accordion a span {
    padding: 0px;
}

#mobile-filter-drawer a span {
    display: block;
}

#mobile-filter-drawer a,
#mobile-filter-drawer a:visited,
#mobile-filter-drawer .ins-accordion .ins-accordion-item_header .inner-head a {
    color: var(--font-color-body);
    font-size: 14px;
    font-weight: 400;
    text-decoration: none;
    line-height: 150%;
}

#mobile-filter-drawer .ins-drawer-body .wrap>a,
#mobile-filter-drawer .ins-drawer-body .wrap>a span {
    font-weight: 700;
    font-size: 14px !important;
    display: block;
    border-bottom: 1px solid var(--color-ui-03, #F3F4F4);
}

#mobile-filter-drawer a.active:not(ins-accordion a) {
    background: var(--color-main-hover-light);
}

#mobile-filter-drawer .ui-sidebar {
    font-family: var(--font-family-01);
}
#mobile-filter-drawer a.active .ui-sidebar {
    color: var(--color-main);
    font-weight: 700;
}

#mobile-filter-drawer .ins-drawer-body .wrap>ins-accordion .ins-accordion-item_header .inner-head a {
    font-weight: 700;
    font-size: 14px !important;
}

#mobile-filter-drawer .ins-drawer-body .wrap>ins-accordion .ins-accordion-item.open .ins-accordion-item_header .inner-head a {
    color: var(--color-main);
}

#mobile-filter-drawer .ins-drawer-body .ins-accordion.menu ins-accordion-item:first-of-type .ins-accordion-item_header {
    border-top: none;
}

@media screen and (max-width: 430px) {
    #mobile-filter-drawer .ins-drawer-wrap .ins-content {
        width: 100% !important;
    }
}

ins-drawer#mobile-menu ins-accordion .ins-accordion-item ins-accordion .ins-accordion-item {
    border-bottom: 1px solid #EBEBEB;
}

ins-drawer#mobile-menu ins-accordion .ins-accordion-item ins-accordion .ins-accordion-item .inner-head {
    padding-left: 40px;
}

ins-drawer#mobile-menu ins-accordion .ins-accordion-item ins-accordion .ins-accordion-item_header>.inner-head .heading {
    font-weight: 400 !important;
}

ins-drawer#mobile-menu ins-accordion .ins-accordion-item .ins-accordion-item_content .ins-accordion-link {
    padding-left: 16px;
}

ins-drawer#mobile-menu ins-accordion .ins-accordion-item ins-accordion .ins-accordion-item .inner-content .ins-accordion-link {
    padding-left: 24px;
}

ins-drawer#mobile-menu .menu .ins-accordion-item_content .sign-out-wrapper {
    padding-left: 16px;
}


/* Search group Stylesheet */

.search-cont .ins-select-wrap .ins-select-value-wrap,
.search-cont .ins-form-field-wrap .ins-form-field {
    border-radius: 0px;
    border-color: var(--color-ui-02);
    background: transparent;
}

.search-cont .ins-form-field-wrap,
.search-cont .ins-select-wrap,
.ins-input-stepper.ins-form-field-wrap,
.ins-select-wrap {
    margin-bottom: 0px;
}
/* ... */

